# slack2discord

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  s2d.py
slack2discord/: __init__.py  discord_ui.py  model.py  slackdata.py  util.py
tests/: test_slack2discord.py
